changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

MSW 2000/11/25:
include/patchlevel.h (removed), doc/spell-docs/Makefile (removed),
include/Makefile.in, include/version.h, server/init.c, server/main.c,
socket/metaserver.c: remove patchlevel.h - include the patchlevel in the
 version.h file, update other files to use version as a single string.

MSW 2000/11/25:
socket/metaserver.c: If on FreeBSD systems, do not attempt to connect to
the metaserve.  FreeBSD seems to have a problem using sendto on a connected
soccket.

MSW 2000/11/25:
configure.in, configure, include/autoconf.h.in, server/main.c:  Update
to check for libdes.a and des.h and use those for password decryption - fixes
a problem on freebsd if it is using md5 crypt.  Hopefully it doesn't break
anything.  main.c was also checking for HAVE_CRYPT_H too early.
include/sproto.h:  Needed updating.  Unrelated to above changes.


MSW 2000/11/22
server/main.c:  Modify enter_exit so that it properly uses per player
unique maps that are only in memory and not on disk.  Remove unused
variable from process events (unrelated change).

PeterM  2000/11/18:
  New spells added:
  1)  Sanctuary   (aura of counterwall)
  2)  Peace	  (make monsters unable to fight)
  3)  Spiderweb   (create spider webs)
  4)  rage	  (heroism, armour, haste, regenration combined)
  5)  forked lightning  (lightning which forks and strikes )
  6)  flaming aura  (aura of fire)
  7)  vitriol     combined ball/cone/pool acid attack spell
  8)  vitriol splash  (spell for internal use only)
  9)  ironwood skin  (clerical version of armour spell)

Not implemented:  10) poison fog

MSW 2000/11/17: